force-app/main/default/objects/Stripe_Invoice__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <description>Amount due for this invoice</description>
    <label>Amount Due</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 