force-app/main/default/objects/Stripe_Invoice__c/fields/Hosted_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Invoice_URL__c</fullName>
    <description>URL to the hosted invoice page</description>
    <label>Hosted Invoice URL</label>
    <type>Url</type>
</CustomField> 