force-app/main/default/objects/Stripe_Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date when this invoice was created</description>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField> 