force-app/main/default/objects/Stripe_Invoice__c/fields/Invoice_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PDF_URL__c</fullName>
    <description>URL to the PDF version of the invoice</description>
    <label>Invoice PDF URL</label>
    <type>Url</type>
</CustomField> 