force-app/main/default/objects/Stripe_Invoice__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Invoice number</description>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 